[gd_scene load_steps=23 format=3 uid="uid://bqup6jvlp5e13"]

[ext_resource type="Texture2D" uid="uid://c3wtwnsrxvhdd" path="res://Addons/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="1_k5qev"]
[ext_resource type="Script" path="res://player/player.gd" id="1_kygoh"]
[ext_resource type="PackedScene" uid="uid://bnlgoy2eut280" path="res://misc/big_skull.tscn" id="2_bnnoh"]
[ext_resource type="PackedScene" uid="uid://dduib2707y476" path="res://misc/ritual.tscn" id="2_jdwup"]
[ext_resource type="PackedScene" uid="uid://dyissvogocr44" path="res://Addons/joystick/joystick.tscn" id="5_plws1"]
[ext_resource type="Texture2D" uid="uid://crkrd57m3ghb7" path="res://Addons/Tiny Swords/UI/Icons/Pressed_01.png" id="6_qs4qu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_so1c6"]
radius = 14.0357

[sub_resource type="Animation" id="Animation_b3oxo"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_2pue7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_gaa02"]
resource_name = "attack_down_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_g5xk8"]
resource_name = "attack_down_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_35q4g"]
resource_name = "attack_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_a8sg4"]
resource_name = "attack_side_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_y7nv1"]
resource_name = "attack_up_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_ibq5c"]
resource_name = "attack_up_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_65vof"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdh4u"]
_data = {
"Idle": SubResource("Animation_b3oxo"),
"RESET": SubResource("Animation_2pue7"),
"attack_down_1": SubResource("Animation_gaa02"),
"attack_down_2": SubResource("Animation_g5xk8"),
"attack_side_1": SubResource("Animation_35q4g"),
"attack_side_2": SubResource("Animation_a8sg4"),
"attack_up_1": SubResource("Animation_y7nv1"),
"attack_up_2": SubResource("Animation_ibq5c"),
"run": SubResource("Animation_65vof")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k4b8d"]
radius = 118.152

[sub_resource type="CircleShape2D" id="CircleShape2D_ug6fq"]
radius = 48.0416

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1wy0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0kqq"]
bg_color = Color(1, 0, 0.0627451, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cwtyd"]
size = Vector2(40, 40)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_kygoh")
ritual_damage = 2
ritual_interval = 15.0
ritual_scene = ExtResource("2_jdwup")
health = 100
death_prefab = ExtResource("2_bnnoh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -23)
texture = ExtResource("1_k5qev")
hframes = 6
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
shape = SubResource("CircleShape2D_so1c6")
debug_color = Color(0, 0.6, 0.701961, 0.215686)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bdh4u")
}
autoplay = "Idle"

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_k4b8d")
debug_color = Color(0.960784, 0, 0, 0)

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(0, -21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CircleShape2D_ug6fq")
debug_color = Color(0.968627, 0, 0.0901961, 0.121569)

[node name="HeathProgressBar" type="ProgressBar" parent="."]
offset_left = -26.0
offset_top = 16.0
offset_right = 23.0
offset_bottom = 22.0
theme_override_styles/background = SubResource("StyleBoxFlat_t1wy0")
theme_override_styles/fill = SubResource("StyleBoxFlat_p0kqq")
value = 20.0
rounded = true
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchScreenAttack" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(972, 465)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_qs4qu")
shape = SubResource("RectangleShape2D_cwtyd")
action = "attack"
visibility_mode = 1

[node name="Joystick" parent="CanvasLayer" instance=ExtResource("5_plws1")]
position = Vector2(147, 465)
visibility_mode = 1

[connection signal="joystick_input" from="CanvasLayer/Joystick" to="." method="_on_joystick_joystick_input"]
